# indubitably-rust-agent-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  STYLE_GUIDE.md  pyproject.toml
examples/: Cargo.toml  README.md  build_and_run.sh  chat_basic.rs  demo.sh  mcp_list_tools.rs  multi_agent_system.rs  multiagent_graph.rs  simple_chat_assistant.rs  web_chat_interface.rs
examples/tests/: integration_test.rs
src/: lib.rs
src/agent/: agent.rs  conversation_manager.rs  mod.rs  result.rs  state.rs
src/event_loop/: event_loop.rs  mod.rs  streaming.rs
src/handlers/: callback_handler.rs  mod.rs
src/hooks/: events.rs  mod.rs  registry.rs
src/models/: anthropic.rs  bedrock.rs  mod.rs  model.rs  ollama.rs  openai.rs
src/multiagent/: base.rs  graph.rs  mod.rs  swarm.rs
src/session/: file_session_manager.rs  mod.rs  repository_session_manager.rs  session_manager.rs
src/telemetry/: config.rs  metrics.rs  mod.rs  tracer.rs
src/tools/: decorator.rs  executor.rs  mcp.rs  mod.rs  registry.rs  watcher.rs
src/types/: collections.rs  content.rs  event_loop.rs  exceptions.rs  guardrails.rs  media.rs  mod.rs  session.rs  streaming.rs  tools.rs  traces.rs
tests/: event_loop_test.rs  examples_test.rs  hooks_handlers_test.rs  integration_test.rs  models_test.rs  multiagent_test.rs  session_test.rs  telemetry_test.rs  tools_test.rs  types_test.rs
