[package]
name = "indubitably-rust-agent-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Indubitably AI <opensource@indubitably.ai>"]
description = "A model-driven approach to building AI agents in just a few lines of code"
license = "MIT"
repository = "https://github.com/indubitably-ai/indubitably-rust-agent-sdk"
homepage = "https://github.com/indubitably-ai/indubitably-rust-agent-sdk"
documentation = "https://docs.rs/indubitably-rust-agent-sdk"
readme = "README.md"
keywords = ["ai", "agents", "llm", "machine-learning", "artificial-intelligence"]
categories = ["artificial-intelligence", "api-bindings", "asynchronous"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"

[[bin]]
name = "indubitably-cli"
path = "src/bin/main.rs"

[lib]
name = "indubitably_rust_agent_sdk"
path = "src/lib.rs"
